static-web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web
  namespace: apps
spec:
  selector:
    appID: static-web
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
