static-web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web
  namespace: apps
spec:
  rules:
  - host: static-web.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: static-web
            port:
              number: 80
